[package]
name = "sgx_tcrypto_helper"
version = "1.1.0"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[lib]
name = "sgx_tcrypto_helper"
crate-type = ["staticlib","rlib"]

[features]
default = ["mesalock_sgx"]
mesalock_sgx = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tcrypto = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd    = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types   = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
itertools = { version = "*", default-features = false }
serde-big-array = { git = "https://github.com/mesalock-linux/serde-big-array-sgx" }
